log
Thu 14 Sep 2023 04:24:13 AM UTC: 
 tests:  1|8
total_score: 0/70
344db7a
Thu 14 Sep 2023 04:40:27 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|8
total_score: 0/70
89e83e3
Thu 14 Sep 2023 04:40:41 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:3: error: ‘new’ undeclared (first use in this function)
   41 |   new->lower_than = lower_than;
      |   ^~~
treemap.c:41:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
6e5b292
Thu 14 Sep 2023 04:40:53 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
3c7fb31
Thu 14 Sep 2023 04:42:15 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|7
total_score: 5/70
45854bb
Thu 14 Sep 2023 05:01:56 AM UTC: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:9: error: unused variable ‘resultado’ [-Werror=unused-variable]
   81 |     int resultado = tree->lower_than(tree->root,key);
      |         ^~~~~~~~~
treemap.c:85:8: error: ‘resultado’ undeclared (first use in this function)
   85 |     if(resultado == 1)
      |        ^~~~~~~~~
treemap.c:85:8: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
2bf9763
Thu 14 Sep 2023 05:02:34 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
418e827
Thu 14 Sep 2023 05:04:27 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:97:16: error: ‘t’ undeclared (first use in this function)
   97 |     resultado =t ree->lower_than(tree->current,key);
      |                ^
treemap.c:97:16: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:97:17: error: expected ‘;’ before ‘ree’
   97 |     resultado =t ree->lower_than(tree->current,key);
      |                 ^~~~
      |                 ;
Compilation failed
f55b0d2
Thu 14 Sep 2023 05:05:36 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
f7261d1
Thu 14 Sep 2023 05:05:58 AM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
c4b8321
